--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.5",
+    "@astrojs/node": "^9.5.1",
     "astro": "^5.16.0",
     "typescript": "^5.9.3"
   }
